Dark Mode Issue Fixed

--- a/Moonshine/moonshine.css
+++ b/Moonshine/moonshine.css
@@ -2487,6 +2487,7 @@ input[type="radio"]:checked + .radio-button {
 
 .sheet-inputchar.sheet-core.sheet-invalid {
   background-color: var(--main-color)!important;
+    color:#1f1f1f;
   border-radius: 100%;
 }
 
@@ -2517,7 +2518,8 @@ input[type="radio"]:checked + .radio-button {
   padding: 0;
   margin: 0;
   font-size: 11px!important;
-}
+    color: var(--blackandwhite);
+  }
 
 .sheet-totalpointcore::before {
   content: "Min: 2 / Max: 6 / Total: 12 / Current: ";
